--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title> Chess_Basics </title>
 </head>
-<link rel="stylesheet" href="instyle.css">
+<link rel="stylesheet" href="index.css">
 
 <body style="background-color:#393e46;">
 
