--- a/notation.html
+++ b/notation.html
@@ -4,7 +4,7 @@
 <head>
 	<title> Chess_Notation </title>
 </head>
-<link rel="stylesheet" href="nostyle.css">
+<link rel="stylesheet" href="notation.css">
 
 <body style="background-color:#393e46;">
 
