--- a/rulesofgame.html
+++ b/rulesofgame.html
@@ -4,7 +4,7 @@
 <head>
 	<title> Chess_Rules </title>
 </head>
-<link rel="stylesheet" href="rustyle.css">
+<link rel="stylesheet" href="rulesofgame.css">
 <div margin:20px>
 
 	<body style="background-color:#393e46;">
