--- a/tactics.html
+++ b/tactics.html
@@ -4,7 +4,7 @@
 <head>
 	<title> Chess_Tactics </title>
 </head>
-<link rel="stylesheet" href="tastyle.css">
+<link rel="stylesheet" href="tactics.css">
 
 <body style="background-color:#393e46;">
 
