--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="sistyle.css">
+<link rel="stylesheet" href="signup.css">
 
 <body>
 
