--- a/playchess.html
+++ b/playchess.html
@@ -72,7 +72,7 @@
 
     <br>
     <center>
-        <iframe src="https://fritz.chessbase.com/en/Fritz#"
+        <iframe src="https://fritz.chessbase.com/en/Fritz"
             style="width:1220px; height:620px; border: 10px solid #32e0c4;"></iframe>
     </center>
 
